2005-06-04  John Luke  <john.luke@gmail.com>

	* DockPaned.cs: handle Shift|F8 to avoid crash for now
	* GdlDockTest.cs: remove C# 2 features

2005-04-28  John Luke  <john.luke@gmail.com>

	* DockBar.cs: remove redundent RemoveItem call
	* DockItem.cs: remove redundent LayoutChanged event
	
2005-04-17  John Luke  <john.luke@gmail.com>

	* Makefile.am: fix distcheck

2005-04-16  John Luke  <john.luke@gmail.com>

	* DockItem.cs:
	* Dock.cs:
	* DockItemGrip.cs:
	* DockNotebook.cs:
	* DockPaned.cs: use ForAll overload that takes a Callback
	* DockMaster.cs: remove unused field

2005-04-06  John Luke  <john.luke@gmail.com>

	* MonoDevelop.Dock.mdp:
	* MonoDevelop.Dock.mds: add project files

2005-03-31  John Luke  <john.luke@gmail.com>

	* DockPaned.cs: only emit layout_changed when
	the position has changed and on button release

2005-03-31  John Luke  <john.luke@gmail.com>

	* *.cs: add license headers
	* TODO: update

2005-03-29  Alp Toker  <alp@atoker.com>

	* DockPaned.cs: make the central pane resize rather than the edge
	panes

2005-03-24  John Luke  <john.luke@gmail.com>

	* DockLayout.cs (UpdateItemsModel): reduce chances of being stuck
	endlessly in the loop, thanks to toshok for pointing me to it

2005-03-17  John Luke  <john.luke@gmail.com>

	* Dock.cs:
	* DockItem.cs:
	* DockItemGrip.cs: clean up SizeRequest and SizeAllocate
	fixes one of our resizing bugs

2005-03-15  John Luke  <john.luke@gmail.com>

	* DockBar.cs:
	* DockBarButton.cs: simplify by just using the
	Clicked signal

2005-03-15  John Luke  <john.luke@gmail.com>

	* DockItemBehavior.cs: add NoGrip flag
	* DockItem.cs:
	* DockItemGrip.cs: hide/show the DockItemGrip based
	on NoGrip flag, not Locked status and update for that

2005-03-15  John Luke  <john.luke@gmail.com>

	* DockItem.cs: add comment about saving position
	* DockPaned.cs: override OnChildPlacement

2005-03-15  Lluis Sanchez Gual <lluis@novell.com>

	* DockItemGrip.cs: Redraw the grip if the title or the icon changes.