@@ -5,7 +5,6 @@
  - when we can use pango 1.6, use the built-in ellipsizing
  - audit event emitting frequency
  - use less ArrayLists
- - Shift|F8 gtk_paned_find neighbors, see ximian bug 61113
 
 potential new features
  - restore size/position on de-iconify?
